<resources>
    <string name="app_name">Linda Jamii</string>
    <string name="search_patient">Search Patient</string>
    <string name="delivery_text_label_delivery">Delivery</string>
    <string name="delivery_text_label_anc_number">ANC Number</string>
    <string name="delivery_text_label_during_of_pregnancy_weeks">During of Pregnancy (Weeks)</string>
    <string name="delivery_text_label_hiv_tested">HIV tested</string>
    <string name="delivery_text_label_counsel_and_test">Counsel and Test</string>
    <string name="delivery_text_label_mode_of_delivery">Mode of Delivery</string>
    <string name="delivery_text_label_date_of_delivery">Date of Delivery</string>
    <string name="delivery_text_label_blood_loss">Blood Loss</string>
    <string name="delivery_text_label_pre_eclampia">Pre-Eclampia</string>
    <string name="delivery_text_label_eclampia">Eclampia</string>
    <string name="delivery_text_label_obstructed_labour">Obstructed Labour</string>
    <string name="delivery_text_label_condition_of_mother">Condition of Mother</string>
    <string name="delivery_text_label_apgar_score">Apgar Score</string>
    <string name="delivery_text_label_rescuscitation_done">Rescuscitation Done</string>
    <string name="delivery_text_label_mother_s_oxytoxin_syntocion_haatr">Mother\'s Oxytoxin/Syntocion HAATR</string>
    <string name="delivery_text_label_baby">Baby:</string>
    <string name="delivery_text_label_vit_k">Vit K</string>
    <string name="delivery_text_label_teo">TEO</string>
    <string name="delivery_text_label_baby_hiv_exposed_nvp_prophylaxis">Baby HIV Exposed: NVP prophylaxis</string>
    <string name="delivery_text_label_birth_weight">Birth Weight</string>
    <string name="delivery_text_label_birth_length">Birth Length</string>
    <string name="delivery_text_label_head_circumference">Head Circumference</string>
    <string name="delivery_text_label_place_of_delivery">Place of Delivery</string>
    <string name="delivery_text_label_conducted_by">Conducted By</string>
    <string name="button_finish_delivery">Finish Delivery</string>
    <string name="home_text_welcome_welcome_to_linda_jamii">Welcome to Linda Jamii</string>
    <string name="home_text_choose_an_option">Choose an Option</string>
    <string name="image_content_description_image_logo_of_linda_jamii_application">Image Logo of Linda Jamii Application</string>
    <string name="login_text_label_login">Login</string>
    <string name="login_hint_login_email">Email</string>
    <string name="login_hint_login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="maternal_profile_title_maternal_profile">Maternal Profile</string>
    <string name="maternal_profile_hint_name_of_institution">Name of Institution</string>
    <string name="maternal_profile_hint_mfl_no">MFL No</string>
    <string name="maternal_profile_hint_anc_no">ANC No</string>
    <string name="maternal_profile_hint_pnc_no">PNC No</string>
    <string name="maternal_profile_hint_name_of_client">Name of Client</string>
    <string name="maternal_profile_hint_age">Age</string>
    <string name="maternal_profile_hint_gravida">Gravida</string>
    <string name="maternal_profile_hint_parity">Parity</string>
    <string name="maternal_profile_hint_height">Height</string>
    <string name="maternal_profile_hint_weight">Weight</string>
    <string name="maternal_profile_hint_l_m_p">L.M.P</string>
    <string name="maternal_profile_hint_e_d_d">E.D.D</string>
    <string name="maternal_profile_hint_marital_status">Marital Status</string>
    <string name="maternal_profile_hint_education">Education</string>
    <string name="maternal_profile_hint_address">Address</string>
    <string name="maternal_profile_hint_telephone">Telephone</string>
    <string name="maternal_profile_hint_next_of_kin">Next of Kin</string>
    <string name="maternal_profile_hint_relationship">Relationship</string>
    <string name="maternal_profile_hint_next_of_kin_s_contacts_phone">Next of Kin\'s Contacts/Phone</string>
    <string name="maternal_profile_hint_medical_history">Medical History</string>
    <string name="surgical_history_label_medical_and_surgical_history">Medical and Surgical History</string>
    <string name="surgical_history_hint_surgical_operation_specify">Surgical Operation-Specify</string>
    <string name="surgical_history_hint_diabetes">Diabetes</string>
    <string name="surgical_history_hint_hypertension">Hypertension</string>
    <string name="surgical_history_hint_blood_transfusion">Blood Transfusion</string>
    <string name="surgical_history_hint_tuberculosis">Tuberculosis</string>
    <string name="surgical_history_hint_any_drug_allergy_specify">Any drug Allergy? Specify</string>
    <string name="surgical_history_hint_others_specify">Others Specify</string>
    <string name="surgical_history_hint_family_history">Family History</string>
    <string name="surgical_history_hint_twins">Twins</string>
    <string name="button_physical_and_antenatal_profile">Physical and Antenatal Profile</string>
    <string name="patients_details_label_maternal_profile">Maternal Profile</string>
    <string name="patients_details_name_of_institution">Name of Institution</string>
    <string name="patients_details_mfl_no">MFL No.</string>
    <string name="patients_details_anc_no">ANC No.</string>
    <string name="patients_details_name_of_client">Name of Client</string>
    <string name="patients_details_age">Age</string>
    <string name="patients_details_gravida">Gravida</string>
    <string name="patients_details_parity">Parity</string>
    <string name="patients_details_height">Height</string>
    <string name="patients_details_weight">Weight</string>
    <string name="patients_details_l_m_p">L.M.P</string>
    <string name="patients_details_e_d_d">E.D.D</string>
    <string name="patients_details_address">Address</string>
    <string name="patients_details_marital_status">Marital Status</string>
    <string name="patients_details_education">Education</string>
    <string name="patients_details_next_of_kin">Next of Kin</string>
    <string name="patients_details_relationship">Relationship</string>
    <string name="patients_details_telephone_number">Telephone Number</string>
    <string name="patients_details_next_of_kin_s_contact">Next of Kin\'s Contact</string>
    <string name="physical_examination_label_physical_examination">Physical Examination</string>
    <string name="physical_examination_hint_general">General</string>
    <string name="physical_examination_hint_bp">BP</string>
    <string name="physical_examination_hint_height">Height</string>
    <string name="physical_examination_hint_cvs">CVS</string>
    <string name="physical_examination_hint_resp">Resp</string>
    <string name="physical_examination_hint_breast">Breast</string>
    <string name="physical_examination_hint_abdomen">Abdomen</string>
    <string name="physical_examination_hint_vaginal_examination">Vaginal Examination</string>
    <string name="physical_examination_hint_discharge_genital_ulcer">Discharge/Genital Ulcer</string>
    <string name="physical_examination_hint_antenatal_profile">Antenatal Profile</string>
    <string name="physical_examination_hint_hb">HB</string>
    <string name="physical_examination_hint_blood_group">Blood Group</string>
    <string name="physical_examination_hint_rhesus_fact">Rhesus Fact</string>
    <string name="physical_examination_hint_serelogy_vdrl_rpr">Serelogy (VDRL/ RPR)</string>
    <string name="physical_examination_hint_tb_screening_as_per_the_intensive_case_finding_tool">TB Screening as per the intensive case finding tool</string>
    <string name="physical_examination_hint_hiv">HIV</string>
    <string name="physical_examination_hint_urinalysis">Urinalysis</string>
    <string name="physical_examination_hint_couple_hiv_counselling_and_testing_done">Couple HIV Counselling and testing Done</string>
    <string name="physical_examination_label_infant_feeding">Infant Feeding</string>
    <string name="physical_examination_hint_infant_feed_counseling_done">Infant Feed Counseling Done</string>
    <string name="physical_examination_hint_exclusive_breastfeeding_counselling_done">Exclusive Breastfeeding Counselling Done</string>
    <string name="physical_examination_hint_finish_initial_visit">Finish Initial Visit</string>
    <string name="post_natal_label_present_pregnancy">Present Pregnancy</string>
    <string name="post_natal_label_a_mother">A. Mother</string>
    <string name="post_natal_hint_timing_of_visit">Timing of Visit</string>
    <string name="post_natal_hint_date_visit">Date/Visit</string>
    <string name="post_natal_hint_blood_pressure">Blood Pressure</string>
    <string name="post_natal_hint_temp">Temp</string>
    <string name="post_natal_hint_pulse">Pulse</string>
    <string name="post_natal_hint_respiratory_rate">Respiratory Rate</string>
    <string name="post_natal_hint_general_condition">General Condition</string>
    <string name="post_natal_hint_breast">Breast</string>
    <string name="post_natal_hint_c_s_scar">c/S scar</string>
    <string name="post_natal_hint_involution_of_uterus">Involution of Uterus</string>
    <string name="post_natal_label_b_baby">B. Baby</string>
    <string name="post_natal_hint_baby_temp">Baby Temp</string>
    <string name="post_natal_hint_breath_per_minute">Breath Per Minute</string>
    <string name="post_natal_hint_baby_s_feeding_method">*Baby\'s feeding Method</string>
    <string name="post_natal_hint_breastfeeding_position">**Breastfeeding Position</string>
    <string name="post_natal_hint_baby_s_umbilical_cord">Baby\'s Umbilical Cord</string>
    <string name="post_natal_hint_immunization_started">Immunization Started</string>
    <string name="post_natal_hint_hei_infant_given_art_prophylaxis">HEI Infant given ART prophylaxis</string>
    <string name="post_natal_hint_infant_contrimoxazole_prophylaxis_initiated">Infant Contrimoxazole prophylaxis initiated</string>
    <string name="button_finish_post_natal">Finish Post-Natal</string>
    <string name="subsequent_visit_label_present_pregnancy">Present Pregnancy</string>
    <string name="subsequent_visit_hint_anc_number">ANC Number</string>
    <string name="subsequent_visit_hint_number_of_visit">Number of Visit</string>
    <string name="subsequent_visit_hint_date_of_visit">Date of Visit</string>
    <string name="subsequent_visit_hint_urine">Urine</string>
    <string name="subsequent_visit_hint_weight">Weight</string>
    <string name="subsequent_visit_hint_b_p">B.P</string>
    <string name="subsequent_visit_hint_h_b">H.B.</string>
    <string name="subsequent_visit_hint_pallor">Pallor</string>
    <string name="subsequent_visit_hint_maturity">Maturity</string>
    <string name="subsequent_visit_hint_fundal_height">Fundal Height</string>
    <string name="subsequent_visit_hint_presentation">Presentation</string>
    <string name="subsequent_visit_hint_lie">Lie</string>
    <string name="subsequent_visit_hint_foetal_heart">Foetal Heart</string>
    <string name="subsequent_visit_hint_foetal_mvt">Foetal Mvt</string>
    <string name="subsequent_visit_hint_next_visit">Next Visit</string>
    <string name="subsequent_visit_label_weight_gain">Weight Gain</string>
    <string name="subsequent_visit_hint_current_weight">Current Weight</string>
    <string name="subsequent_visit_hint_gestation_week">Gestation Week</string>
    <string name="button_subsequent_visit_visit_done">Visit Done</string>
    <string name="label_dispensary_mur_malanga_dispensary">Mur-Malanga Dispensary</string>
    <string name="label_dispensary_in_charge_ruth_polo">Ruth Polo</string>
    <string name="item_patient_label_anc_number">ANC Number:</string>
    <string name="item_patient_label_e_d_d">E.D.D:</string>
    <string name="item_patient_label_next_visit">Next Visit:</string>
    <string name="item_patient_label_age">Age:</string>
    <string name="drawer_menu_title_initial_visit">Initial Visit</string>
</resources>