<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.initialvisit.medicalSurgicalHistory.MedicalSurgicalHistoryFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_label_medical_surgical_history"
            style="@style/Theme.LindaJamii.TextVisitHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/surgical_history_label_medical_and_surgical_history"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_medical_surgical_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_medical_surgical_history">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_medical_surgical_history_surgical_operation"
                    style="@style/Theme.LindaJamii.TextInputLayout.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_medical_surgical_history_surgical_operation_specific"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/surgical_history_hint_surgical_operation_specify"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_medical_surgical_history_diabetes"
                    style="@style/Theme.LindaJamii.TextInputLayout.Outlined.ExposedDropMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/text_layout_medical_surgical_history_hyper_tension"
                    app:layout_constraintStart_toStartOf="@+id/text_layout_medical_surgical_history_surgical_operation"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_medical_surgical_history_surgical_operation">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/text_medical_surgical_history_diabetes"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/surgical_history_hint_diabetes"
                        android:inputType="text"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_medical_surgical_history_hyper_tension"
                    style="@style/Theme.LindaJamii.TextInputLayout.Outlined.ExposedDropMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_layout_medical_surgical_history_diabetes"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_medical_surgical_history_surgical_operation">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/text_medical_surgical_history_hypertension"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/surgical_history_hint_hypertension"
                        android:inputType="text"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_medical_surgical_history_blood_transfusion"
                    style="@style/Theme.LindaJamii.TextInputLayout.Outlined.ExposedDropMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/text_layout_medical_surgical_history_hyper_tension"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_medical_surgical_history_diabetes">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/text_medical_surgical_history_blood_transfusion"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/surgical_history_hint_blood_transfusion"
                        android:inputType="text"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_medical_surgical_history_tuberculosis"
                    style="@style/Theme.LindaJamii.TextInputLayout.Outlined.ExposedDropMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_layout_medical_surgical_history_blood_transfusion"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_medical_surgical_history_hyper_tension">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/text_medical_surgical_history_tuberculosis"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/surgical_history_hint_tuberculosis"
                        android:inputType="text"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_medical_surgical_history_drug_allergy"
                    style="@style/Theme.LindaJamii.TextInputLayout.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/text_layout_medical_surgical_history_hyper_tension"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_medical_surgical_history_blood_transfusion">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_medical_surgical_history_drug_allergy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/surgical_history_hint_any_drug_allergy_specify"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_medical_surgical_history_others_drug_allergy_specify"
                    style="@style/Theme.LindaJamii.TextInputLayout.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_layout_medical_surgical_history_blood_transfusion"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_medical_surgical_history_tuberculosis">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_medical_surgical_history_others_drug_allergy_specify"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/surgical_history_hint_others_specify"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_label_family_history"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/surgical_history_hint_family_history"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_layout_medical_surgical_history_twins"
                    app:layout_constraintEnd_toStartOf="@+id/text_layout_medical_surgical_history_twins"
                    app:layout_constraintStart_toStartOf="@+id/text_layout_medical_surgical_history_drug_allergy"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_medical_surgical_history_drug_allergy" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_medical_surgical_history_twins"
                    style="@style/Theme.LindaJamii.TextInputLayout.Outlined.ExposedDropMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/text_layout_medical_surgical_history_family_history_tuberculosis"
                    app:layout_constraintStart_toEndOf="@+id/text_label_family_history"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_medical_surgical_history_drug_allergy">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/text_medical_surgical_history_twins"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/surgical_history_hint_twins"
                        android:inputType="text"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_medical_surgical_history_family_history_tuberculosis"
                    style="@style/Theme.LindaJamii.TextInputLayout.Outlined.ExposedDropMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_layout_medical_surgical_history_twins"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_medical_surgical_history_others_drug_allergy_specify">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/text_medical_surgical_history_family_history_tuberculosis"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/surgical_history_hint_tuberculosis"
                        android:inputType="text"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_next_physical_antenatal_infant_feeding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/button_physical_and_antenatal_profile"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintEnd_toEndOf="@+id/text_layout_medical_surgical_history_family_history_tuberculosis"
                    app:layout_constraintStart_toStartOf="@+id/text_label_family_history"
                    app:layout_constraintTop_toBottomOf="@+id/text_label_family_history" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar_medical_surgical_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            style="@style/Widget.AppCompat.ProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>